// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooEmptyStateComponent rendering should create an empty state of a given type 1`] = `
<yoo-empty-state
  class="hydrated"
  data-yoo-empty-state-host=""
  type="type"
>
  
  <div
    class="container"
    data-yoo-empty-state=""
  >
    <img
      data-yoo-empty-state=""
      src="./assets/empty-states/type.svg"
    />
  </div>
</yoo-empty-state>
`;

exports[`YooEmptyStateComponent rendering should render 1`] = `
<yoo-empty-state
  class="hydrated"
  data-yoo-empty-state-host=""
>
  
  <div
    class="container"
    data-yoo-empty-state=""
  >
    <img
      data-yoo-empty-state=""
      src="./assets/empty-states/empty.svg"
    />
  </div>
</yoo-empty-state>
`;
